Fix workflow for Universal JAR